--- a/compton.conf
+++ b/compton.conf
@@ -3,7 +3,7 @@ shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 3;
+shadow-radius = 3.5;
 shadow-offset-x = -3;
 shadow-offset-y = -3;
 shadow-opacity = 0.7;
@@ -23,9 +23,9 @@ shadow-exclude = [
 
 # Opacity
 menu-opacity = 1;
-inactive-opacity = 0.8;
-# active-opacity = 0.8;
-frame-opacity = 0.7;
+inactive-opacity = 1;
+active-opacity = 1;
+frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
@@ -59,7 +59,7 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = "drm";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
